Applying patch from giantsloth at fastmail.fm Inverted logic for text-indent in RTL

BUG:63351

svn path=/trunk/kdelibs/; revision=357236